added and fixed formatting for quotes

--- a/src/app/mystyles.module.scss
+++ b/src/app/mystyles.module.scss
@@ -323,30 +323,28 @@
   }
 }
 
-
-.quoteContainerText {
-    border: 2px solid white;
-    width: 50%;
-    margin: 2em;
-    border-radius: 28px;
-}
-
-.testimonialImg {
-    position: relative;
-    left: -1em;
-    top: -1em;
-}
-
-
-.testamonialContainers {
+.zigzag {
   display: flex;
-  flex-direction: column;
+  width: 100%;
 }
 
-.testamonialContainers >:nth-child(odd) {
-  align-self: flex-start;
+.zigzag:nth-child(odd) {
+  justify-content: flex-start;
 }
 
-.testamonialContainers > *:nth-child(even) {
-  align-self: flex-end;
+.zigzag:nth-child(even) {
+  justify-content: flex-end;
+}
+
+.quoteBox {
+  width: 50%;
+  padding: 5px;
+  border-radius: 50px;
+  border:3px solid #ffffff;
+}
+
+.testimonialImg{
+  top:-1em;
+  left: -1em;
+  position: relative;
 }
