--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,10 +1,18 @@
 @import "tailwindcss";
 
 
-
 :root {
-  --background: #000000;
-  --foreground: #171717;
+  font-family: "JetBrains Mono";
+  --stripe-color: #070918;
+  --bg: var(--stripe-color);
+  --maincolor: var(--background);
+  color:#fff
+}
+
+@property --blink-opacity {
+  syntax: "<number>";
+  inherits: false;
+  initial-value: 1;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -15,8 +23,12 @@
 }
 
 body {
-  color: var(--foreground);
+  width: 100cqw;
+  min-height: 100cqh;
+  display: flex;
+  place-content: center;
+  place-items: flex-start center;
   background: var(--background);
-  font-size: medium;
-  /* font-family: Arial, Helvetica, sans-serif; */
+    overflow-x: hidden;
+
 }
