--- a/src/app/mystyles.module.scss
+++ b/src/app/mystyles.module.scss
@@ -40,24 +40,23 @@
   position: relative;
   overflow: hidden;
   transition: box-shadow 0.3s ease;
-  /* Smooth transition for the glow */
 }
 
 @keyframes shadowRotateAnticlockwise {
   0% {
-    box-shadow: inset 0 1px 0 #fff; /* top */
+    box-shadow: inset 0 1px 0 #fff; 
   }
 
   50% {
-    box-shadow: inset -1px 0 0 #fff, inset 0 -1px 0 #fff; /* left + bottom */
+    box-shadow: inset -1px 0 0 #fff, inset 0 -1px 0 #fff; 
   }
 
   75% {
-    box-shadow: inset 0 -1px 0 #fff, inset 1px 0 0 #fff; /* bottom + right */
+    box-shadow: inset 0 -1px 0 #fff, inset 1px 0 0 #fff; 
   }
 
   100% {
-    box-shadow: inset 1px 0 0 #fff, inset 0 1px 0 #fff; /* right + top again */
+    box-shadow: inset 1px 0 0 #fff, inset 0 1px 0 #fff;
   }
 }
 
@@ -69,7 +68,6 @@
   position: absolute;
   left: 50%;
   bottom: 1.25rem;
-  /* Equivalent to Tailwind's bottom-5 (5 * 0.25rem) */
   animation: scrollArrowAnimation 1.5s linear infinite;
 }
 
@@ -95,7 +93,6 @@
   width: 100%;
   height: auto;
   position: relative;
-  overflow-x: hidden; // Prevent horizontal scrolling
   box-sizing: border-box;
 }
 
